@@ -5,16 +5,17 @@ import com.capabilities.project.domain.api.CapabilityServicePort;
 import com.capabilities.project.domain.enums.TechnicalMessage;
 import com.capabilities.project.domain.exception.BusinessException;
 import com.capabilities.project.infraestructure.entrypoints.dto.BootcampCapabilityDto;
-import com.capabilities.project.infraestructure.entrypoints.dto.BootcampIdsDto;
 import com.capabilities.project.infraestructure.entrypoints.dto.CapabilityDto;
 import com.capabilities.project.infraestructure.entrypoints.mapper.CapabilityMapper;
-import com.capabilities.project.infraestructure.entrypoints.util.ApiResponse;
-import com.capabilities.project.infraestructure.entrypoints.util.ApiResponseMap;
+import com.capabilities.project.infraestructure.entrypoints.util.response.ApiResponseBase;
+import com.capabilities.project.infraestructure.entrypoints.util.response.ApiResponseBaseMap;
 import com.capabilities.project.infraestructure.entrypoints.util.error.ApplyErrorHandler;
+import com.capabilities.project.infraestructure.entrypoints.util.response.BootcampListIdResponse;
 import com.capabilities.project.infraestructure.entrypoints.util.validate.BootcampCapabilityValidation;
 import com.capabilities.project.infraestructure.entrypoints.util.validate.ValidateRequestSave;
-import com.capabilities.project.infraestructure.persistenceadapter.webclients.response.TechnologyCapabilityResponse;
-import com.capabilities.project.infraestructure.persistenceadapter.webclients.response.TechnologyResponse;
+import com.capabilities.project.infraestructure.persistenceadapter.webclients.mapper.CapabilityTechnologyMapperResponse;
+import com.capabilities.project.infraestructure.persistenceadapter.webclients.response.ApiCapabilityTechnologyResponseList;
+import com.capabilities.project.infraestructure.persistenceadapter.webclients.response.CapabilityListTechnologyResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -30,8 +31,6 @@ import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.LinkedHashMap;
 
 import static com.capabilities.project.infraestructure.entrypoints.util.Constants.CAPABILITY_ERROR;
 import static com.capabilities.project.infraestructure.entrypoints.util.Constants.X_MESSAGE_ID;
@@ -47,31 +46,7 @@ public class CapabilityHandlerImpl {
     private final ApplyErrorHandler applyErrorHandler;
     private final BootcampCapabilityValidation bootcampCapabilityValidation;
     private final BootcampCapabilityServicePort bootcampCapabilityServicePort;
-    String messageId = "6165416541";
-
-    public Mono<ServerResponse> create(ServerRequest request) {
-        Mono<ServerResponse> response = validateRequestSave.validateAndMapRequest(request)
-                .map(capabilityMapper::toCapability)
-                .transform(capabilityServicePort::save)
-                .collectList()
-                .flatMap(list -> {
-                    var dtos = list.stream()
-                            .map(capabilityMapper::toCapabilityDto)
-                            .collect(Collectors.toList());
-                    return ServerResponse.status(HttpStatus.CREATED)
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(ApiResponse.builder()
-                                    .code(TechnicalMessage.CAPABILITY_CREATED.getMessage())
-                                    .message(TechnicalMessage.CAPABILITY_CREATED.getMessage())
-                                    .date(Instant.now().toString())
-                                    .data(dtos)
-                                    .build());
-                })
-                .contextWrite(Context.of(X_MESSAGE_ID, messageId))
-                .doOnError(ex -> log.error(CAPABILITY_ERROR, ex));
-
-        return applyErrorHandler.applyErrorHandling(response, messageId);
-    }
+    private final CapabilityTechnologyMapperResponse capabilityTechnologyMapperResponse;
 
     public Mono<ServerResponse> getTechnologiesByCapabilitiesIds(ServerRequest request) {
         List<Long> ids = request.queryParams().getOrDefault("capabilityIds", List.of()).stream()
@@ -82,30 +57,26 @@ public class CapabilityHandlerImpl {
         int rows = Integer.parseInt(request.queryParam("rows").orElse("4"));
         int skip = Integer.parseInt(request.queryParam("skip").orElse("0"));
 
-        Mono<ServerResponse> response = capabilityServicePort.findTechnologiesByIdCapabilities(ids, order, skip, rows)
-                .flatMap(map -> {
-                    var data = map.entrySet().stream()
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    e -> e.getValue().stream()
-                                            .map(t -> new TechnologyResponse(t.getId(), t.getName()))
-                                            .collect(Collectors.toList()),
-                                    (a, b) -> a,
-                                    LinkedHashMap::new
-                            ));
+        Mono<ServerResponse> response = capabilityServicePort.findTechnologiesByIdCapabilitiesModel(ids, order, skip, rows)
+                .flatMap(listData -> {
+
+                    List<CapabilityListTechnologyResponse> responseList = listData.stream()
+                            .map(capabilityTechnologyMapperResponse::toCapabilityListTechnologiesResponse)
+                            .toList();
+
                     return ServerResponse.ok()
                             .contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(TechnologyCapabilityResponse.builder()
+                            .bodyValue(ApiCapabilityTechnologyResponseList.builder()
                                     .code(TechnicalMessage.CAPABILITY_TECHNOLOGIES_FOUND.getCode())
                                     .message(TechnicalMessage.CAPABILITY_TECHNOLOGIES_FOUND.getMessage())
                                     .date(Instant.now().toString())
-                                    .data(data)
+                                    .data(responseList)
                                     .build());
                 })
-                .contextWrite(Context.of(X_MESSAGE_ID, messageId))
-                .doOnError(ex -> log.error("Error getting technologies: {}", ex.getMessage(), ex));
+                .contextWrite(Context.of(X_MESSAGE_ID, ""))
+                .doOnError(ex -> log.error(CAPABILITY_ERROR, ex));
 
-        return applyErrorHandler.applyErrorHandling(response, messageId);
+        return applyErrorHandler.applyErrorHandling(response);
     }
 
     public Mono<ServerResponse> createCapabilityRelateTechnologies(ServerRequest request) {
@@ -113,34 +84,29 @@ public class CapabilityHandlerImpl {
         Mono<ServerResponse> response = validateRequestSave.validateAndMapRequest(request)
                 .map(capabilityMapper::toCapability)
                 .transform(capabilityServicePort::saveCapabilityTechnology)
+                .map(list -> list.stream()
+                        .map(capabilityTechnologyMapperResponse::toCapabilityListTechnologiesResponse)
+                        .toList())
                 .flatMap(ct -> {
-                    var data = ct.getData().entrySet().stream()
-                            .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    e -> e.getValue().stream()
-                                            .map(t -> new TechnologyResponse(t.getId(), t.getName()))
-                                            .collect(Collectors.toList()),
-                                    (a, b) -> a,
-                                    LinkedHashMap::new
-                            ));
                     return ServerResponse.status(HttpStatus.CREATED)
                             .contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(TechnologyCapabilityResponse.builder()
+                            .bodyValue(ApiCapabilityTechnologyResponseList.builder()
                                     .code(TechnicalMessage.CAPABILITY_TECHNOLOGY_RELATION.getCode())
                                     .message(TechnicalMessage.CAPABILITY_TECHNOLOGY_RELATION.getMessage())
-                                    .date(ct.getDate())
-                                    .data(data)
+                                    .date(Instant.now().toString())
+                                    .data(ct)
                                     .build());
                 })
-                .contextWrite(Context.of(X_MESSAGE_ID, messageId))
+                .contextWrite(Context.of(X_MESSAGE_ID, ""))
                 .doOnError(ex -> log.error(CAPABILITY_ERROR, ex)).next();
 
-        return applyErrorHandler.applyErrorHandling(response, messageId);
+        return applyErrorHandler.applyErrorHandling(response);
     }
 
     public Mono<ServerResponse> createBootcampCapability(ServerRequest request) {
         Mono<ServerResponse> response = request.bodyToMono(BootcampCapabilityDto.class)
                 .flatMap(bootcampCapabilityValidation::validateDuplicateIds)
+                .flatMap(bootcampCapabilityValidation::validateFieldNotNullOrBlank)
                 .flatMap(dto -> {
                     if (dto.getBootcampId() == null || dto.getCapabilityIds() == null || dto.getCapabilityIds().isEmpty()) {
                         return Mono.error(new BusinessException(TechnicalMessage.INVALID_PARAMETERS));
@@ -149,21 +115,26 @@ public class CapabilityHandlerImpl {
                 })
                 .then(ServerResponse.status(HttpStatus.CREATED)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .bodyValue(ApiResponse.builder()
+                        .bodyValue(ApiResponseBase.builder()
                                 .code(TechnicalMessage.BOOTCAMP_CAPABILITY_CREATED.getMessage())
                                 .message(TechnicalMessage.BOOTCAMP_CAPABILITY_CREATED.getMessage())
                                 .date(Instant.now().toString())
                                 .build()
                         )
-                ).contextWrite(Context.of(X_MESSAGE_ID, messageId))
+                ).contextWrite(Context.of(X_MESSAGE_ID, ""))
                 .doOnError(ex -> log.error(CAPABILITY_ERROR, ex));
 
-        return applyErrorHandler.applyErrorHandling(response, messageId);
+        return applyErrorHandler.applyErrorHandling(response);
     }
 
     public Mono<ServerResponse> getCapabilitiesListByBootcampIds(ServerRequest request) {
-        Mono<ServerResponse> response = request.bodyToMono(BootcampIdsDto.class)
-                .flatMapMany(dto -> Flux.fromIterable(dto.getBootcampIds()))
+
+        List<Long> bootcampIds = request.queryParams().getOrDefault("bootcampIds", List.of()).stream()
+                .flatMap(p -> Arrays.stream(p.split("\\s*,\\s*")))
+                .map(Long::parseLong)
+                .toList();
+
+        Mono<ServerResponse> response = Flux.fromIterable(bootcampIds)
                 .flatMap(bootcampId ->
                         bootcampCapabilityServicePort.findCapabilitiesByBootcamp(bootcampId)
                                 .map(capList -> {
@@ -177,18 +148,69 @@ public class CapabilityHandlerImpl {
                 .flatMap(resultMap ->
                         ServerResponse.ok()
                                 .contentType(MediaType.APPLICATION_JSON)
-                                .bodyValue(ApiResponseMap.builder()
+                                .bodyValue(ApiResponseBaseMap.builder()
                                         .code(TechnicalMessage.BOOTCAMP_CAPABILITY_FOUND.getCode())
                                         .message(TechnicalMessage.BOOTCAMP_CAPABILITY_FOUND.getMessage())
                                         .date(Instant.now().toString())
-                                        .data(resultMap) // este data ahora es un Map<Long, List<TechnologyDto>>
+                                        .data(resultMap)
                                         .build())
                 )
-                .contextWrite(Context.of(X_MESSAGE_ID, messageId))
+                .contextWrite(Context.of(X_MESSAGE_ID, ""))
                 .doOnError(ex -> log.error(CAPABILITY_ERROR, ex));
 
-        return applyErrorHandler.applyErrorHandling(response, messageId);
+        return applyErrorHandler.applyErrorHandling(response);
 
+    }
+
+    public Mono<ServerResponse> getCapabilitiesByIds(ServerRequest request) {
+        List<Long> technologyIds = request.queryParams()
+                .get("ids")
+                .stream()
+                .flatMap(param -> Arrays.stream(param.split(","))) // Manejo de lista en query param
+                .map(Long::parseLong)
+                .toList();
+
+        Mono<ServerResponse> response = capabilityServicePort.getCapabilityByIds(technologyIds)
+                .map(capabilityMapper::toCapabilityDto)
+                .collectList()
+                .flatMap(techList -> ServerResponse.ok()
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .bodyValue(ApiResponseBase.builder()
+                                .code(TechnicalMessage.CAPABILITIES_FOUND.getCode())
+                                .message(TechnicalMessage.CAPABILITIES_FOUND.getMessage())
+                                .date(Instant.now().toString())
+                                .data(techList)
+                                .build()
+                        )
+                )
+                .contextWrite(Context.of(X_MESSAGE_ID, ""))
+                .doOnError(ex -> log.error(CAPABILITY_ERROR, ex));
+
+        return applyErrorHandler.applyErrorHandling(response);
+    }
+
+    public Mono<ServerResponse> deleteBootcampsCapabilities(ServerRequest request) {
+        List<Long> capabilityIds = request.queryParams()
+                .get("capabilityIds")
+                .stream()
+                .flatMap(param -> Arrays.stream(param.split(",")))
+                .map(Long::parseLong)
+                .toList();
+
+        Mono<ServerResponse> response =bootcampCapabilityServicePort.deleteBootcampsCapabilities(capabilityIds)
+                .then(ServerResponse.ok()
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .bodyValue(ApiResponseBase.builder()
+                                .code(TechnicalMessage.BOOTCAMPS_CAPABILITIES_DELETE.getCode())
+                                .message(TechnicalMessage.BOOTCAMPS_CAPABILITIES_DELETE.getMessage())
+                                .date(Instant.now().toString())
+                                .build()
+                        )
+                )
+                .contextWrite(Context.of(X_MESSAGE_ID, ""))
+                .doOnError(ex -> log.error(CAPABILITY_ERROR, ex));
+
+        return applyErrorHandler.applyErrorHandling(response);
     }
 
 }
